--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "react": "18.0.0",
-    "react-native": "0.69.0",
+    "react-native": "^0.69.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
     "react-native-vector-icons": "^9.2.0"
